--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>new repo</p>  
-    <p class="feature">this is my new feature </p>
+    <p class="feature">this is my new feature (button) </p>
 
 
 </body>
